# ha-modern-messenger

./: README.md  hacs.json  pyproject.toml
custom_components/: api.py  config_flow.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/ha-modern-messenger/: __init__.py  const.py  metadata.json
