[project]
name = "ha-modern-messenger"
version = "0.1.0"
description = "Fully UI configured FB Messenger notification target for Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.venv
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# Setting isort to 'black' profile ensures they don't conflict
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

